2002-04-27  Seth Nickell  <snickell@stanford.edu>

	* background.desktop.in:

	Improve the comment.

2002-04-21  Rachel Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (setup_dialog): Update for
	new enum peditor prototypes.

Wed Apr 10 18:06:35 2002  Jonathan Blandford  <jrb@gnome.org>

	* background.desktop.in (Exec): s/gnome2/gnome

Mon Apr  1 19:19:39 2002  Jonathan Blandford  <jrb@redhat.com>

	* background-properties-capplet.c (dialog_button_clicked_cb):
	handle GTK_RESPONSE_DELETE_EVENT

	* Makefile.am (bin_PROGRAMS):
	s/gnome2-background-properties/gnome-background-properties
	

2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (create_dialog),
	background-properties.glade: Add mnemonics.
	(main): Set title to "Background Preferences".

2002-03-21  Seth Nickell  <snickell@stanford.edu>

	* background-properties-capplet.c: (main):

	Set the window icon.

2002-03-21  Seth Nickell  <snickell@stanford.edu>

	* background-properties-capplet.c: (string_to_orientation),
	(update_color_widget_labels_and_visibility),
	(peditor_value_changed), (setup_dialog), (create_dialog):
	* background-properties.glade:

	Recapture some of the more subtle interactions of "Seth's UI".
	Change colour labels when the gradient orientation changes,
	and use mnemonics so the capplet is accessible. Pad and space
	as designed.

	There are still at least two things wrong:

	1) Havoc & Jonathan convinced me that the large button with
	   label was wrong. This should instead look like:
	   http://beauty.stanford.edu/bg_button.png
	   The new format should be right for all image selectors, the
	   old mechanism had serious usability problems.
	2) "No Picture" should be the first toggle

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c:
	(everywhere): Use an ApplierSet instead of passing around
	BGPreferences.
	(real_realize_cb): Call applier_set_redraw.