@@ -1,3 +1,13 @@
+2002-05-02  Dennis Cranston <dennis_cranston@yahoo.com>
+
+ 	* background-properties.glade: add a stock information image
+	to the "You can drag image files..." text.
+
+2002-05-08  Jody Goldberg <jody@gnome.org>
+
+	* background-properties-capplet.c (cb_dialog_response) : new.
+	(main) : support help.
+
 2002-04-27  Seth Nickell  <snickell@stanford.edu>
 
 	* background.desktop.in:
